fix(text): remove display block from text alignment classes

--- a/styles/web/sass/core/helpers/_typography.scss
+++ b/styles/web/sass/core/helpers/_typography.scss
@@ -85,20 +85,17 @@
 }
 
 .text-white {
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 // Alignment options
 .text-left {
-    display: block;
     text-align: left !important;
 }
 .text-center {
-    display: block;
     text-align: center !important;
 }
 .text-right {
-    display: block;
     text-align: right !important;
 }
 .text-justify {
